feat: adding assigned

--- a/client/src/app/components/issues-list/issues-list.component.scss
+++ b/client/src/app/components/issues-list/issues-list.component.scss
@@ -72,6 +72,10 @@
     background-color: white;
 }
 
+.addButton {
+    background-color: $primary;
+}
+
 @media screen and (max-width: $on-mobile) {
     .todoListContainer {
         width: 90%;
