--- a/client/src/app/components/issues-list/issues-list.component.html
+++ b/client/src/app/components/issues-list/issues-list.component.html
@@ -1,9 +1,9 @@
 <div class="todoListContainer">
     <div class="todoListTitles">
-        <h3 class="titleColumn ">Issue Identifier</h3>
-        <h3 class="titleColumn ">Issue Detail</h3>
+        <h3 class="titleColumn" (click)="setSort()">Issue Identifier</h3>
+        <h3 class="titleColumn">Issue Detail</h3>
         <h3 class="assigneeColumn ">Assignee </h3>
-        <h3 class="statusColumn center" (click)="setStatus()">Status <p class="icon" [ngClass]="{'rotate': order }">v</p></h3>
+        <h3 class="statusColumn center">Status</h3>
         <div class="actionsColumn center"><h3>Actions</h3></div>
     </div>
     <div class="lottie" *ngIf="!issues">
@@ -15,6 +15,9 @@
             (deleteIssue)="onDeleteButtonClick($event)"
             (updateIssue)="updateIssue($event)" >
     </app-todo-item>
+    <div class="footer" style="text-align: right;">
+        <button mat-flat-button style="background-color: green;">Add</button>
+    </div>
     <div class="paginationControl">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
